@@ -67,6 +67,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/udp_socket.hpp"
 #include "libtorrent/aux_/session_settings.hpp"
 #include "libtorrent/ssl.hpp"
+#include "libtorrent/string_view.hpp"
 
 namespace libtorrent {
 
@@ -367,9 +368,7 @@ enum class event_t : std::uint8_t
 
 		// this is only used for SOCKS packets, since
 		// they may be addressed to hostname
-		// TODO: 3 make sure the udp_socket supports passing on string-hostnames
-		// too, and that this function is used
-		bool incoming_packet(char const* hostname, span<char const> buf);
+		bool incoming_packet(string_view hostname, span<char const> buf);
 
 		void update_transaction_id(
 			std::shared_ptr<udp_tracker_connection> c
